--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ $default-space: 24px;
 
 #navbar {
     position: absolute;
-    width: 100vw;
+    width: 100%;
     display: flex;
     color: $light;
     align-items: center;
